--- a/docs/classProject_rpt.Rmd
+++ b/docs/classProject_rpt.Rmd
@@ -11,7 +11,7 @@ knitr::opts_knit$set(root.dir="../")
 ```
 
 
-# Analysis of Daily Bike Count data on Three Portland Bridges
+# Daily Bike Count data on Three Portland Bridges
 ## Hawthorne, Tilikum, and Steel Bridges
 
 
@@ -20,8 +20,43 @@ source("code/load_data.R")
 head(bikeCntWeather)
 ```
   
+```{r loadData}
+library(readxl)
+library(lubridate)
+library(tidyverse)
 
-```{r plotXY, echo=FALSE}
+input_file <- "data/Hawthorne Tilikum Steel daily bike counts 073118.xlsx"
+bridge_name <- "Hawthorne"
+
+# define a funtion that load bike counts data
+load_data <- function(input_file, bridge_name) {
+  bikecounts <- read_excel(input_file,
+                           sheet = bridge_name,
+                           skip = 1)
+  bikecounts$brname <- bridge_name
+  bikecounts
+}
+
+Tilikum <- load_data(input_file, "Tilikum")
+Hawthorne <- load_data(input_file, "Hawthorne")
+names(Hawthorne) <- names(Tilikum)  # use the column names of Tilikum for Hawthorne
+Steel <- load_data(input_file, "Steel")
+names(Steel) <- c("date", "lower", "westbound", "eastbound", "total", "brname")
+# combine all three data frames for all three bridges
+bikecounts <- bind_rows(Hawthorne, 
+                        Tilikum, 
+                        Steel %>% select(-lower)) # exclude the `lower` col in Steel data frame
+# weather data
+weatherData <- read_csv("data/NCDC-CDO-USC00356750.csv")
+weatherData
+# join bikeconts and weatherData
+bikeCntWeather <- bikecounts %>%
+  mutate(DATE=as_date(date)) %>%
+  left_join(weatherData)
+
+```
+
+```{r plotXY}
 library(ggplot2)
 p <- ggplot(data = bikecounts) + 
   geom_point(mapping = aes(x = date, y = total,color = brname)) 
@@ -32,7 +67,7 @@ p + labs(color="Bridge") + labs(title = "Daily Total Bike Counts")
   
 ###Bar chart - Average Bike Counts per day for each Bridge
 ####by day of week
-```{r barDOW, echo=FALSE}
+```{r barDOW}
 bikecounts$dow <- wday(as.Date(bikecounts$date), label = TRUE)
 bikeCNTdow <- bikecounts %>%
   group_by(dow,brname) %>%
@@ -44,7 +79,7 @@ p + labs(x = "Bridge")
 ```
 
 ### Bike Counts vs. Precipitaion (inches)
-```{r plotPRCP, echo = FALSE}
+```{r plotPRCP}
 ggplot(data = bikeCntWeather) + 
   geom_point(mapping = aes(x = PRCP, y = total,color = brname)) + 
   facet_wrap(~ brname, nrow = 1) +
@@ -54,7 +89,7 @@ ggplot(data = bikeCntWeather) +
 
 ### Bike Counts vs. Minimum Temperature
 
-```{r plotTMIN, echo = FALSE}
+```{r plotTMIN}
 ggplot(data = bikeCntWeather) + 
   geom_point(mapping = aes(x = TMIN, y = total,color = brname)) + 
   facet_wrap(~ brname, nrow = 1) +
