--- a/docs/index_kg.Rmd
+++ b/docs/index_kg.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "index_kg.Rmd"
-author: "K. Gladhill with edit"
+title: "Kristie's Report"
+author: "K. Gladhill"
 date: "August 10, 2018"
 output: html_document
 ---
@@ -9,7 +9,27 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Header Level 1
+## Header Level 2
+__bold text__
+*italics*
+
+Check out the bulleted list  
+* bold with double-asterisks  
+* italics with underscores  
+* code-type font with backticks  
+
+Another way to get bulletted list:  
+- bold with double-asterisks  
+- italics with underscores  
+- code-type font with backticks  
+
+ equations
+    LaTeX
+   use $ $ and $$ $$ to insert math equations, 
+   like $E = mc^2$ and
+
+$$y = \mu + \sum_{i=1}^p \beta_i x_i + \epsilon$$
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
@@ -28,3 +48,4 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
